@@ -1,5 +1,9 @@
 2014-03-10  Jason Merrill  <jason@redhat.com>
 
+	PR c++/60367
+	* call.c (convert_default_arg): Remove special handling for
+	CONSTRUCTOR.
+
 	PR c++/53492
 	* parser.c (cp_parser_class_head): Also check PRIMARY_TEMPLATE_P
 	when deciding whether to call push_template_decl for a member class.
